# AutoSheet

./: .coverage  .gitignore  Makefile  README.md  optical_distance_test.py  pyproject.toml
scripts/: clean.py  clean_cache.py  clean_package.py  create_cache.py  create_folders.py  distances_to_csv.py
source/autosheet/: main.py
source/autosheet/app/: Window.py  operations.py
source/autosheet/core/: distance.py  glyph.py  match.py  process.py  recognition.py
source/autosheet/data/: distances.py  font.py  image.py  matches.py  pdfs.py
source/autosheet/data/models/: Distance.py  Match.py
source/autosheet/utils/: chars.py  constants.py  paths.py  strings.py
tests/core/: test_distance.py  test_glyph.py  test_match.py  test_process.py  test_recognition.py
tools/: distances_to_csv.py  matches_to_csv.py
